--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <div class="wrapper">
   <div class="todo">
     <h1>My ToDo list</h1>
-    <app-todolist></app-todolist>
+    <router-outlet></router-outlet>
+    <!-- <app-todolist></app-todolist> -->
   </div>
 </div>
